# pie

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  LICENSE  README.md  go.mod  go.sum  poetry.toml  pyproject.toml  schema.sql  tombi.toml
cmd/load-github-data/: main.go
internal/: github.go  issue.go  projectprocessor.go
pie/: __init__.py  __main__.py  clickhouse.py  config.py  github.py  issue.py  project_processor.py  similar.py
tests/: conftest.py  test_config.py  test_project_processor.py  test_similar.py
