[tool.poetry]
name = "pie"
version = "0.1.0"
description = "Project Intelligence Engine - For managing projects and reasoning about them"
authors = ["Andrew Wray <andrew@denseanalysis.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.13"

clickhouse-connect = "^0.8.15"
pygithub = "^2.6.1"
sentence_transformers = "^3.4.1"
nltk = "^3.9.1"
numpy = "^2.2.3"

[tool.poetry.dev-dependencies]
pyright = "1.1.397"
ruff = "0.9.10"

[build-system]
requires = ["poetry-core>=2.1.1"]
build-backend = "poetry.core.masonry.api"

